tests/algorithms/x/C/graphs/depth_first_search.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c: In function ‘depth_first_search’:
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:127:32: error: ‘graph_lens’ undeclared (first use in this function)
  127 |         size_t neighbors_len = graph_lens[v];
      |                                ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:127:32: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c: In function ‘main’:
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:36: error: initializer element is not constant
  152 |         static void* G_vals[23] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5, G_vals_6};
      |                                    ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:36: note: (near initialization for ‘G_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:46: error: initializer element is not constant
  152 |         static void* G_vals[23] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5, G_vals_6};
      |                                              ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:46: note: (near initialization for ‘G_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:56: error: initializer element is not constant
  152 |         static void* G_vals[23] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5, G_vals_6};
      |                                                        ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:56: note: (near initialization for ‘G_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:66: error: initializer element is not constant
  152 |         static void* G_vals[23] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5, G_vals_6};
      |                                                                  ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:66: note: (near initialization for ‘G_vals[3]’)
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:76: error: initializer element is not constant
  152 |         static void* G_vals[23] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5, G_vals_6};
      |                                                                            ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:76: note: (near initialization for ‘G_vals[4]’)
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:86: error: initializer element is not constant
  152 |         static void* G_vals[23] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5, G_vals_6};
      |                                                                                      ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:86: note: (near initialization for ‘G_vals[5]’)
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:96: error: initializer element is not constant
  152 |         static void* G_vals[23] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5, G_vals_6};
      |                                                                                                ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/depth_first_search.c:152:96: note: (near initialization for ‘G_vals[6]’)
